# cleanepi_py

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FEATURE_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  README.md  RELEASE_IMPLEMENTATION.md  cleaned_explicit.csv  pyproject.toml  requirements.txt  sample_data.csv  setup.py  terms_of_reference.md  test_data.csv  test_data_cleaned.csv
.github/: copilot-instructions.md
cleanepi/: __init__.py  clean_data.py  convert_to_numeric.py  find_and_remove_duplicates.py  guess_dates.py  print_report.py  remove_constants.py  replace_missing_values.py  standardize_date.py  standardize_subject_ids.py  utils.py
examples/: basic_usage.py  comprehensive_example.py  generate_perf_data.py  phase2_implementation_demo.py  phase3_performance_demo.py  phase3_quick_test.py  usage_example.py
output/: .gitkeep
src/cleanepi/: __init__.py  cli.py  cli_backup.py
src/cleanepi/cleaning/: __init__.py  convert_numeric.py  date_sequence.py  dictionary_cleaning.py  remove_constants.py  remove_duplicates.py  replace_missing.py  standardize_columns.py  standardize_dates.py  validate_subject_ids.py
src/cleanepi/core/: __init__.py  clean_data.py  config.py  report.py
src/cleanepi/distribution/: __init__.py
src/cleanepi/performance/: __init__.py  async_processing.py  benchmarking.py  dask_processing.py  distributed.py  streaming.py
src/cleanepi/service/: __init__.py  manager.py  web_server.py
src/cleanepi/utils/: __init__.py  data_scanning.py  performance.py  validation.py
src/cleanepi/web/: api.py  jobs.py
src/cleanepi/web/static/: app.css
src/cleanepi/web/templates/: base.html  config.html  index.html  jobs.html
tests/: __init__.py  test_basic.py  test_basic_functionality.py  test_phase3_performance.py  test_structure.py
tests/test_data/: clean_data.csv  cleaning_dictionary.json  date_sequence_data.csv  perf_1000.csv  perf_4000.csv  sample_messy_data.csv
tests/unit/: test_cli.py  test_config.py  test_convert_numeric.py  test_data_scanning.py  test_date_sequence.py  test_dictionary_cleaning.py  test_remove_constants.py  test_remove_duplicates.py  test_replace_missing.py  test_report.py  test_standardize_columns.py  test_standardize_dates.py  test_validate_subject_ids.py  test_validation.py  test_web_api.py
